2009-03-18  Alejandro Pinheiro <apinheiro@igalia.com>

	* debian/rules: set a11y suppport compilation as the default one
	* src/a11y/hildon-desktop-a11y.c: use the environment variable
	ENABLE_HILDON_DESKTOP_A11Y in order to check in runtime if it is
	needed to init the a11y support

2009-03-18  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed default application icon name to the correct spelling.
	Fixes: NB#106105.

	* src/launcher/hd-launcher.h:

2009-03-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.26

2009-03-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h: Fix for bugs NB#105855 and NB#106022,
	both related to what is blurred/visible in home edit mode.
	* src/mb/hd-comp-mgr.c: Fixed regression caused by misplaced assert

2009-03-17  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Use the lowmem signal to determine whether we can launch new
	applications.
	Fixes: NB#106339

	* src/launcher/hd-app-mgr.c:

2009-03-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c: Changes to unregister_client so that an
	unregistered HdApp no longer contains links to the followers it
	had previously.

2009-03-17  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c
	  (hd_home_view_container_constructed): Use g_mkdir_with_parents fix
	  warning.

	* src/home/hd-home.c (hd_home_desktop_key_press): Use Gdk to get
	pressed key. Fixes: NB#104578, NB#104534

2009-03-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c
	* src/launcher/hd-app-mgr.c: Code to start an app launch transition
	whenever hildon-desktop is asked to launch an application
	* src/home/hd-render-manager.c: Switched to using object_get_data to
	find clients from actors as it is faster than a search
	* src/home/hd-switcher.c: Added extra checks for valid clients to